# RecoTgV2.0

./: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  migrations.Dockerfile  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 003e104121d7_init_users_channels.py  434576d6ccb0_create_posts_table.py  884b49755c44_add_users_table.py  a28898b52000_init.py  dccc27c4f4db_update_users_scheme.py  fdb797c7ae86_update_user_model.py
recotg/app/: main.py
recotg/services/auth_service/: Dockerfile
recotg/services/auth_service/app/: db.py  main.py  models.py  settings.py
secrets/: etl_session.session
src/services/auth/: Dockerfile
src/services/auth/app/: Dockerfile  db.py  deps.py  main.py  models.py  repository.py  schemas.py  service.py  settings.py  tokens.py
src/services/auth/app/routers/: auth.py
src/services/bot/: Dockerfile
src/services/bot/app/: Dockerfile  auth_client.py  config.py  main.py  storage.py
src/services/bot/app/handlers/: __init__.py  contact.py  me.py  start.py
src/services/etl/: Dockerfile
src/services/etl/.tg_session/: .tg_session.session
src/services/etl/app/: app_channels_source.py  auth_session.py  cli.py  config.py  db.py  db_base.py  load_csv.py  main.py  scheduler.py
src/services/etl/app/clients/: telethon_client.py
src/services/etl/app/crud/: channel.py
src/services/etl/app/models/: __init__.py  channel.py  post.py
src/services/etl/app/pipelines/: backfill_posts_min.py  update_channel_stats_min.py
src/services/etl/app/routers/: channels.py
src/services/etl/app/schemas/: channel.py
src/services/etl/app/utils/: ratelimit.py  safe_tg.py
src/shared/: pyproject.toml
