[tool.poetry]
name = "recotg"
version = "0.1.0"
description = "Recommendation microservice for Telegram channels"
authors = ["Andrey <d3signerwrk@gmail.com>"]
readme = "README.md"
packages = [{ include = "recotg" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.119.1"}
sqlalchemy = "^2.0.44"
pydantic = "^2.12.3"
pydantic-settings = "^2.11.0"
uvicorn = "^0.30"
alembic = "^1.17.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.11"
pyjwt = "^2.10.1"
greenlet = "^3.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true